[gd_scene load_steps=9 format=3 uid="uid://cbfe05uqpe2ww"]

[ext_resource type="Script" path="res://Player/Character/player.gd" id="1_plba5"]
[ext_resource type="PackedScene" uid="uid://dnshaeplewb85" path="res://Player/Palette/palette.tscn" id="2_ybmla"]
[ext_resource type="Script" path="res://Player/player_upgrades_interface.gd" id="3_gmi6u"]

[sub_resource type="Gradient" id="Gradient_4o03r"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.529, 0.808, 0.922, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f7til"]
gradient = SubResource("Gradient_4o03r")
width = 85
height = 62

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wb7x1"]
radius = 31.0
height = 85.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p5nhg"]
radius = 31.0
height = 84.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qy1jw"]
radius = 300.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_plba5")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 3840
limit_bottom = 2160
limit_smoothed = true
position_smoothing_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_f7til")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wb7x1")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p5nhg")

[node name="Palette" parent="." instance=ExtResource("2_ybmla")]
position = Vector2(0, -56)

[node name="GunCooldownTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="GunSwitchCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitImmunityTimer" type="Timer" parent="."]
one_shot = true

[node name="ChromeKnucklesProximity" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChromeKnucklesProximity"]
shape = SubResource("CircleShape2D_qy1jw")

[node name="PlayerInterface" type="CanvasLayer" parent="."]

[node name="PlayerUpgradesInterface" type="HBoxContainer" parent="PlayerInterface"]
offset_left = 355.0
offset_top = 30.0
offset_right = 395.0
offset_bottom = 70.0
script = ExtResource("3_gmi6u")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
